--- a/css/videos.css
+++ b/css/videos.css
@@ -48,6 +48,7 @@ body{
 .nav-bar {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 button a {
@@ -75,6 +76,7 @@ li a:hover {
 
 .logo {
     margin-left: 1.5%;
+
 }
 
 .nav-list {
@@ -171,6 +173,10 @@ li a:hover {
 @media (max-width: 480px) {
 
     .about-container-2{
-        font-size: 1rem;
+        font-size: 2rem;
     }
+    .logo {
+        width: 230px;
+    }
+
 }
