Se saco el padding de la nav-list

--- a/css/renderings.css
+++ b/css/renderings.css
@@ -185,4 +185,10 @@ article:hover{
     .logo {
         width: 230px;
     }
+    .menu {
+        width: 150px;
+    }
+    .nav-list {
+        padding-left: 0;
+    }
 }
