--- a/css/videos.css
+++ b/css/videos.css
@@ -178,5 +178,10 @@ li a:hover {
     .logo {
         width: 230px;
     }
-
+    .menu {
+        width: 150px;
+    }
+    .nav-list {
+        padding-left: 0;
+    }
 }
