--- a/css/animations.css
+++ b/css/animations.css
@@ -219,4 +219,10 @@ article:hover{
     .logo {
         width: 230px;
     }
+    .menu {
+        width: 150px;
+    }
+    .nav-list {
+        padding-left: 0;
+    }
 }
