--- a/css/styles.css
+++ b/css/styles.css
@@ -93,21 +93,26 @@ img{
     z-index: 1;
 }
 
-.buttons{
-    position: fixed;
+.buttons-container {
+    width: 100vw;
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
     z-index: 400;
     bottom: 0;
-    right: 0;
+}
+
+.buttons{
     margin-right: 3vh;
     margin-bottom: 1vh;
 }
 
 .buttons button {
-    width: 6vh;
-    height: 6vh;
-    font-size:3vh;
+    width: 57px;
+    height: 57px;
+    font-size: 29px;
     font-weight: bold;
-    padding: 1vh;
+    padding: 10px;
     color: white;
     background-color: rgba(0,0,0,.5);
     border: none;
@@ -187,11 +192,12 @@ img{
     z-index: 300;
     top: 30%;
     width: 100%;
-    transition: all 0.5s ease-in;
+    transition: all 0.5s ease-out;
     opacity: 0;
 }
 
 .show-about {
+    transition: all 0.5s ease-out;
     opacity: 1;
 }
 .show-about:hover {
@@ -226,17 +232,16 @@ img{
         font-size: 1rem;
     }
 
-    img{
-        height: 100vh;
-	}
+	.buttons-container{
+        width: 100vw;
+        justify-content: center;
+    }
+
+    .buttons {
+        margin-right: 0;
+        margin-bottom: 25px;
+    }
 	
-	.buttons{
-        bottom: 9vh;
-        right: 18vh;
-		margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 0;
-	}
     .buttons button:hover{
         background-color: rgba(0,0,0,.5);
         cursor: default;
